--- a/math/advanced_linear_algebra/advanced_linear_algebra.ipynb
+++ b/math/advanced_linear_algebra/advanced_linear_algebra.ipynb
@@ -52,7 +52,9 @@
     "    \"\"\"Calculates the determinant of a matrix\"\"\"\n",
     "\n",
     "    # Check if matrix is list of lists\n",
-    "    if not isinstance(matrix, list) or (len(matrix) == 0 and not all(isinstance(row, list) for row in matrix)):\n",
+    "    if not isinstance(matrix, list) or (len(matrix) == 0 and not all\n",
+    "                                        (isinstance(row, list)\n",
+    "                                         for row in matrix)):\n",
     "        raise TypeError(\"matrix must be a list of lists\")\n",
     "    if len(matrix) == 0 or (len(matrix) == 1 and len(matrix[0]) == 0):\n",
     "        return 1\n",
@@ -85,7 +87,7 @@
     "        # Add or subtract current value times determinant of the submatrix\n",
     "        det += value * determinant(submatrix) * (-1) ** index\n",
     "\n",
-    "    return det\n"
+    "    return det"
    ]
   },
   {
@@ -163,9 +165,10 @@
    "source": [
     "def inverse(matrix):\n",
     "    \"\"\"Calculates if matrix is a list of lists\"\"\"\n",
-    "    \"\"\"Calculates the inverse of a matrix\"\"\"\n",
     "    # Check if matrix is a list of lists\n",
-    "    if not isinstance(matrix, list) or not all(isinstance(row, list) for row in matrix):\n",
+    "    if type(matrix) is not list or not all(isinstance\n",
+    "                                           (row, list) for row\n",
+    "                                           in matrix):\n",
     "        raise TypeError(\"matrix must be a list of lists\")\n",
     "\n",
     "    # Check if matrix is square\n",
@@ -174,10 +177,10 @@
     "        raise ValueError(\"matrix must be a non-empty square matrix\")\n",
     "\n",
     "    # Calculate the determinant\n",
-    "    deter = determinant(matrix)\n",
+    "    det = determinant(matrix)\n",
     "\n",
     "    # If determinant is 0, matrix has no inverse (singular)\n",
-    "    if deter == 0:\n",
+    "    if det == 0:\n",
     "        return None\n",
     "\n",
     "    # Calculate the cofactor matrix\n",
@@ -191,7 +194,7 @@
     "    inverse_matrix = [[elem / det for elem in row] for\n",
     "                      row in adjugate_matrix]\n",
     "\n",
-    "    return inverse_matrix\n"
+    "    return inverse_matrix"
    ]
   },
   {
