--- a/unsupervised_learning/clustering/k_means_initialization.ipynb
+++ b/unsupervised_learning/clustering/k_means_initialization.ipynb
@@ -138,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "id": "72a75ee0",
       "metadata": {},
       "outputs": [],
@@ -164,32 +164,26 @@
         "    if not isinstance(iterations, int) or iterations <= 0:\n",
         "        return None, None\n",
         "\n",
-        "    n, d = X.shape\n",
-        "\n",
-        "    C = initialize(X, k)\n",
-        "    clss = None\n",
-        "\n",
-        "    for _ in range(iterations):\n",
-        "        C_prev = np.copy(C)\n",
-        "\n",
-        "        dist = np.sqrt(((X - C[:, np.newaxis])**2).sum(axis=-1))\n",
-        "        clss = np.argmin(dist, axis=0)\n",
-        "\n",
-        "        for j in range(k):\n",
-        "            if (clss == j).any():\n",
-        "                C[j] = np.mean(X[clss == j], axis=0)\n",
+        "    Cs = initialize(X, k)\n",
+        "    clss = np.argmin(np.linalg.norm(X[:, np.newaxis] - Cs, axis=2), axis=1)\n",
+        "    for i in range(iterations):\n",
+        "        Cs_copy = Cs.copy()\n",
+        "        for i in range(len(Cs)):\n",
+        "            if len(X[clss == i] > 0):\n",
+        "                Cs_copy[i] = np.mean(X[clss == i], axis=0)\n",
         "            else:\n",
-        "                C[j] = initialize(X, 1)\n",
-        "\n",
-        "        if np.all(C_prev == C):\n",
-        "            return C, clss\n",
-        "\n",
-        "    return C, clss"
+        "                Cs_copy[i] = initialize(X, 1)\n",
+        "        clss = np.argmin(np.linalg.norm(X[:, np.newaxis] - Cs_copy, axis=2),\n",
+        "                         axis=1)\n",
+        "        if np.array_equal(Cs, Cs_copy):\n",
+        "            break\n",
+        "        Cs = Cs_copy\n",
+        "    return Cs, clss\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "id": "d2b1f89f",
       "metadata": {},
       "outputs": [
