added exception on task 2

--- a/unsupervised_learning/clustering/k_means_initialization.ipynb
+++ b/unsupervised_learning/clustering/k_means_initialization.ipynb
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "c33d8019",
       "metadata": {},
       "outputs": [],
@@ -268,10 +268,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "86dbc6a3",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Variance with 1 clusters: 157927.7052\n",
+            "Variance with 2 clusters: 82095.68297\n",
+            "Variance with 3 clusters: 34784.23723\n",
+            "Variance with 4 clusters: 23158.40095\n",
+            "Variance with 5 clusters: 7868.52123\n",
+            "Variance with 6 clusters: 7406.93077\n",
+            "Variance with 7 clusters: 6930.66361\n",
+            "Variance with 8 clusters: 6162.15884\n",
+            "Variance with 9 clusters: 5843.92455\n",
+            "Variance with 10 clusters: 5727.41124\n"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "\n",
