--- a/unsupervised_learning/clustering/k_means_initialization.ipynb
+++ b/unsupervised_learning/clustering/k_means_initialization.ipynb
@@ -319,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 17,
       "id": "79d267c1",
       "metadata": {},
       "outputs": [],
@@ -348,29 +348,27 @@
         "    if not isinstance(iterations, int) or iterations <= 0:\n",
         "        return None, None\n",
         "\n",
+        "    # Create empty lists\n",
         "    results = []\n",
+        "    vars = []\n",
         "    d_vars = []\n",
         "\n",
-        "    k = kmin\n",
-        "    while (k <= kmax):\n",
-        "        klusters, klss = kmeans(X, k, iterations)\n",
-        "        if k == kmin:\n",
-        "            var = variance(X, klusters)\n",
-        "            results.append((klusters, klss))\n",
-        "            d_vars.append(0.0)\n",
-        "            k += 1\n",
-        "            continue\n",
+        "    # Calculate kmeans and variance through range of kmin to kmax\n",
+        "    for k in range(kmin, kmax + 1):\n",
+        "        C, clss = kmeans(X, k, iterations)\n",
+        "        results.append((C, clss))\n",
+        "        vars.append(variance(X, C))\n",
         "\n",
-        "        results.append((klusters, klss))\n",
-        "        d_vars.append(abs(var - variance(X, klusters)))\n",
-        "        k += 1\n",
+        "    # Calculate d_vars from the smallest cluster size 4 each cluster\n",
+        "    for var in vars:\n",
+        "        d_vars.append(vars[0] - var)\n",
         "\n",
         "    return results, d_vars\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 18,
       "id": "b28f7c2d",
       "metadata": {},
       "outputs": [
