task 5 rework attempt

--- a/unsupervised_learning/clustering/k_means_initialization.ipynb
+++ b/unsupervised_learning/clustering/k_means_initialization.ipynb
@@ -339,13 +339,15 @@
         "        results is a list containing the outputs of K-means for each cluster size.\n",
         "        d_vars is a list containing the difference in variance from the smallest cluster size for each cluster size.\n",
         "    \"\"\"\n",
-        "    if not isinstance(X, np.ndarray) or len(X.shape) != 2:\n",
+        "    if type(X) is not np.ndarray or X.ndim != 2:\n",
         "        return None, None\n",
-        "    if not isinstance(kmin, int) or kmin <= 0 or X.shape[0] < kmin:\n",
+        "    if type(kmin) is not int or kmin < 1:\n",
         "        return None, None\n",
-        "    if not isinstance(kmax, int) or kmax <= 0 or X.shape[0] < kmax:\n",
+        "    if kmax is None:\n",
+        "        kmax = X.shape[0]\n",
+        "    if type(kmax) is not int or kmax <= 0 or kmin >= kmax:\n",
         "        return None, None\n",
-        "    if not isinstance(iterations, int) or iterations <= 0:\n",
+        "    if type(iterations) is not int or iterations < 1:\n",
         "        return None, None\n",
         "\n",
         "    # Create empty lists\n",
@@ -579,7 +581,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "1aeae6d8",
       "metadata": {},
       "outputs": [],
@@ -647,7 +649,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "cf1355ce",
       "metadata": {},
       "outputs": [],
@@ -671,31 +673,46 @@
         "    if not isinstance(S, np.ndarray) or len(S.shape) != 2:\n",
         "        return None\n",
         "\n",
-        "    n, d = X.shape\n",
+        "    _, dimensions = X.shape\n",
         "\n",
-        "    X_m = X - m\n",
+        "    # Calculate the inverse and determinant of the covariance matrix\n",
+        "    inv_covariance = np.linalg.inv(S)\n",
+        "    det_covariance = np.linalg.det(S)\n",
         "\n",
-        "    S_inv = np.linalg.inv(S)\n",
+        "    if det_covariance <= 0:\n",
+        "        return None\n",
         "\n",
-        "    fac = np.einsum('...k,kl,...l->...', X_m, S_inv, X_m)\n",
+        "    X_minus_mean = X - m\n",
         "\n",
-        "    P = 1. / (np.sqrt((2 * np.pi) ** d * np.linalg.det(S))) * np.exp(-fac / 2)\n",
+        "    # Calculate the exponent of the PDF formula\n",
+        "    exponent = -0.5 * np.sum(X_minus_mean @\n",
+        "                             inv_covariance * X_minus_mean, axis=1)\n",
+        "    # Calculate the coefficient of the PDF formula\n",
+        "    coeff = 1 / np.sqrt((2 * np.pi) ** dimensions * det_covariance)\n",
         "\n",
-        "    P = np.maximum(P, 1e-300)\n",
+        "    # Calculate the PDF values, and set mins to 1e-300\n",
+        "    pdf_values = coeff * np.exp(exponent)\n",
+        "    pdf_values = np.maximum(pdf_values, 1e-300)\n",
         "\n",
-        "    return P"
+        "    return pdf_values\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "19b7494f",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[3.47450910e-05 2.53649178e-06 1.80348301e-04 ... 1.24604061e-04\n",
+            " 1.86345129e-04 2.59397003e-05]\n"
+          ]
+        }
+      ],
       "source": [
-        "import numpy as np\n",
-        "\n",
-        "\n",
         "if __name__ == '__main__':\n",
         "    np.random.seed(0)\n",
         "    m = np.array([12, 30, 10])\n",
