--- a/unsupervised_learning/clustering/k_means_initialization.ipynb
+++ b/unsupervised_learning/clustering/k_means_initialization.ipynb
@@ -666,11 +666,17 @@
         "    Returns:\n",
         "    numpy.ndarray: The PDF values for each data point. Shape (n,).\n",
         "    \"\"\"\n",
-        "    if not isinstance(X, np.ndarray) or len(X.shape) != 2:\n",
+        "    if type(X) is not np.ndarray or len(X.shape) != 2:\n",
         "        return None\n",
-        "    if not isinstance(m, np.ndarray) or len(m.shape) != 1:\n",
+        "    if type(m) is not np.ndarray or len(m.shape) != 1:\n",
         "        return None\n",
-        "    if not isinstance(S, np.ndarray) or len(S.shape) != 2:\n",
+        "    if type(S) is not np.ndarray or len(S.shape) != 2:\n",
+        "        return None\n",
+        "    if X.shape[1] != m.shape[0]:\n",
+        "        return None\n",
+        "    if S.shape[0] != S.shape[1]:\n",
+        "        return None\n",
+        "    if m.shape[0] != S.shape[0]:\n",
         "        return None\n",
         "\n",
         "    _, dimensions = X.shape\n",
