--- a/unsupervised_learning/clustering/k_means_initialization.ipynb
+++ b/unsupervised_learning/clustering/k_means_initialization.ipynb
@@ -739,7 +739,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 34,
       "id": "c9032952",
       "metadata": {},
       "outputs": [],
@@ -776,30 +776,26 @@
         "    if False in [np.isclose(pi.sum(), 1)]:\n",
         "        return None, None\n",
         "\n",
-        "    n = X.shape[0]\n",
-        "    k = m.shape[0]\n",
+        "    n, d = X.shape\n",
+        "    k = pi.shape[0]\n",
         "\n",
         "    g = np.zeros((k, n))\n",
         "\n",
-        "    # Calculate PDF of each data point in each cluster\n",
-        "    PDF = np.zeros((k, n))\n",
         "    for i in range(k):\n",
-        "        try:\n",
-        "            PDF[i] = pi[i] * pdf(X, m[i], S[i])\n",
-        "        except (Exception):\n",
-        "            return None, None\n",
+        "        P = pdf(X, m[i], S[i])\n",
+        "        g[i] = pi[i] * P\n",
         "\n",
-        "    # Normalize g\n",
-        "    g = PDF / np.sum(PDF, axis=0)\n",
+        "    g_sum = np.sum(g, axis=0)\n",
+        "    g /= g_sum\n",
         "\n",
-        "    loglikelihood = np.sum(np.log(np.sum(PDF, axis=0)))\n",
+        "    r = np.sum(np.log(g_sum))\n",
         "\n",
-        "    return g, loglikelihood\n"
+        "    return g, r\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 35,
       "id": "dc34b066",
       "metadata": {},
       "outputs": [
@@ -810,7 +806,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[33], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m X \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mconcatenate((a, b, c, d), axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[1;32m      9\u001b[0m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mshuffle(X)\n\u001b[0;32m---> 10\u001b[0m pi, m, S \u001b[39m=\u001b[39m initialize(X, \u001b[39m4\u001b[39;49m)\n\u001b[1;32m     11\u001b[0m g, l \u001b[39m=\u001b[39m expectation(X, pi, m, S)\n\u001b[1;32m     12\u001b[0m \u001b[39mprint\u001b[39m(g)\n",
+            "Cell \u001b[0;32mIn[35], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m X \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mconcatenate((a, b, c, d), axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[1;32m      9\u001b[0m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mshuffle(X)\n\u001b[0;32m---> 10\u001b[0m pi, m, S \u001b[39m=\u001b[39m initialize(X, \u001b[39m4\u001b[39;49m)\n\u001b[1;32m     11\u001b[0m g, l \u001b[39m=\u001b[39m expectation(X, pi, m, S)\n\u001b[1;32m     12\u001b[0m \u001b[39mprint\u001b[39m(g)\n",
             "Cell \u001b[0;32mIn[19], line 24\u001b[0m, in \u001b[0;36minitialize\u001b[0;34m(X, k)\u001b[0m\n\u001b[1;32m     20\u001b[0m n, d \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39mshape\n\u001b[1;32m     22\u001b[0m pi \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mfull((k,), \u001b[39m1\u001b[39m \u001b[39m/\u001b[39m k)\n\u001b[0;32m---> 24\u001b[0m m, _ \u001b[39m=\u001b[39m kmeans(X, k)\n\u001b[1;32m     26\u001b[0m S \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mfull((k, d, d), np\u001b[39m.\u001b[39midentity(d))\n\u001b[1;32m     28\u001b[0m \u001b[39mreturn\u001b[39;00m pi, m, S\n",
             "Cell \u001b[0;32mIn[6], line 22\u001b[0m, in \u001b[0;36mkmeans\u001b[0;34m(X, k, iterations)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(iterations, \u001b[39mint\u001b[39m) \u001b[39mor\u001b[39;00m iterations \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     20\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m, \u001b[39mNone\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m Cs \u001b[39m=\u001b[39m initialize(X, k)\n\u001b[1;32m     23\u001b[0m clss \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margmin(np\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39mnorm(X[:, np\u001b[39m.\u001b[39mnewaxis] \u001b[39m-\u001b[39m Cs, axis\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m), axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     24\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(iterations):\n",
             "Cell \u001b[0;32mIn[19], line 24\u001b[0m, in \u001b[0;36minitialize\u001b[0;34m(X, k)\u001b[0m\n\u001b[1;32m     20\u001b[0m n, d \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39mshape\n\u001b[1;32m     22\u001b[0m pi \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mfull((k,), \u001b[39m1\u001b[39m \u001b[39m/\u001b[39m k)\n\u001b[0;32m---> 24\u001b[0m m, _ \u001b[39m=\u001b[39m kmeans(X, k)\n\u001b[1;32m     26\u001b[0m S \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mfull((k, d, d), np\u001b[39m.\u001b[39midentity(d))\n\u001b[1;32m     28\u001b[0m \u001b[39mreturn\u001b[39;00m pi, m, S\n",
