--- a/unsupervised_learning/clustering/k_means_initialization.ipynb
+++ b/unsupervised_learning/clustering/k_means_initialization.ipynb
@@ -849,7 +849,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "id": "be4559c2",
       "metadata": {},
       "outputs": [],
@@ -872,31 +872,56 @@
         "        return None, None, None\n",
         "    if not isinstance(g, np.ndarray) or len(g.shape) != 2:\n",
         "        return None, None, None\n",
+        "    if False in np.isclose(g.sum(axis=0), np.ones((g.shape[1]))):\n",
+        "        return None, None, None\n",
         "\n",
         "    n, d = X.shape\n",
         "    k = g.shape[0]\n",
         "\n",
+        "    if g.shape[1] != n:\n",
+        "        return None, None, None\n",
+        "\n",
         "    pi = np.sum(g, axis=1) / n\n",
-        "\n",
-        "    m = np.dot(g, X) / np.sum(g, axis=1, keepdims=True)\n",
-        "\n",
+        "    m = np.zeros((k, d))\n",
         "    S = np.zeros((k, d, d))\n",
+        "\n",
         "    for i in range(k):\n",
-        "        X_m = X - m[i]\n",
-        "        S[i] = np.dot(g[i] * X_m.T, X_m) / np.sum(g[i])\n",
+        "        m[i] = np.sum(g[i].reshape(-1, 1) * X, axis=0) / np.sum(g[i])\n",
+        "        diff = X - m[i]\n",
+        "        S[i] = np.dot(g[i].reshape(1, -1) * diff.T, diff) / np.sum(g[i])\n",
         "\n",
         "    return pi, m, S\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "id": "f3334a49",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "RecursionError",
+          "evalue": "maximum recursion depth exceeded",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[39], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m X \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mconcatenate((a, b, c, d), axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[1;32m      9\u001b[0m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mshuffle(X)\n\u001b[0;32m---> 10\u001b[0m pi, m, S \u001b[39m=\u001b[39m initialize(X, \u001b[39m4\u001b[39;49m)\n\u001b[1;32m     11\u001b[0m g, _ \u001b[39m=\u001b[39m expectation(X, pi, m, S)\n\u001b[1;32m     12\u001b[0m pi, m, S \u001b[39m=\u001b[39m maximization(X, g)\n",
+            "Cell \u001b[0;32mIn[19], line 24\u001b[0m, in \u001b[0;36minitialize\u001b[0;34m(X, k)\u001b[0m\n\u001b[1;32m     20\u001b[0m n, d \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39mshape\n\u001b[1;32m     22\u001b[0m pi \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mfull((k,), \u001b[39m1\u001b[39m \u001b[39m/\u001b[39m k)\n\u001b[0;32m---> 24\u001b[0m m, _ \u001b[39m=\u001b[39m kmeans(X, k)\n\u001b[1;32m     26\u001b[0m S \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mfull((k, d, d), np\u001b[39m.\u001b[39midentity(d))\n\u001b[1;32m     28\u001b[0m \u001b[39mreturn\u001b[39;00m pi, m, S\n",
+            "Cell \u001b[0;32mIn[6], line 22\u001b[0m, in \u001b[0;36mkmeans\u001b[0;34m(X, k, iterations)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(iterations, \u001b[39mint\u001b[39m) \u001b[39mor\u001b[39;00m iterations \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     20\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m, \u001b[39mNone\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m Cs \u001b[39m=\u001b[39m initialize(X, k)\n\u001b[1;32m     23\u001b[0m clss \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margmin(np\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39mnorm(X[:, np\u001b[39m.\u001b[39mnewaxis] \u001b[39m-\u001b[39m Cs, axis\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m), axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     24\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(iterations):\n",
+            "Cell \u001b[0;32mIn[19], line 24\u001b[0m, in \u001b[0;36minitialize\u001b[0;34m(X, k)\u001b[0m\n\u001b[1;32m     20\u001b[0m n, d \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39mshape\n\u001b[1;32m     22\u001b[0m pi \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mfull((k,), \u001b[39m1\u001b[39m \u001b[39m/\u001b[39m k)\n\u001b[0;32m---> 24\u001b[0m m, _ \u001b[39m=\u001b[39m kmeans(X, k)\n\u001b[1;32m     26\u001b[0m S \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mfull((k, d, d), np\u001b[39m.\u001b[39midentity(d))\n\u001b[1;32m     28\u001b[0m \u001b[39mreturn\u001b[39;00m pi, m, S\n",
+            "Cell \u001b[0;32mIn[6], line 22\u001b[0m, in \u001b[0;36mkmeans\u001b[0;34m(X, k, iterations)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(iterations, \u001b[39mint\u001b[39m) \u001b[39mor\u001b[39;00m iterations \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     20\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m, \u001b[39mNone\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m Cs \u001b[39m=\u001b[39m initialize(X, k)\n\u001b[1;32m     23\u001b[0m clss \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margmin(np\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39mnorm(X[:, np\u001b[39m.\u001b[39mnewaxis] \u001b[39m-\u001b[39m Cs, axis\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m), axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     24\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(iterations):\n",
+            "    \u001b[0;31m[... skipping similar frames: initialize at line 24 (1482 times), kmeans at line 22 (1482 times)]\u001b[0m\n",
+            "Cell \u001b[0;32mIn[19], line 24\u001b[0m, in \u001b[0;36minitialize\u001b[0;34m(X, k)\u001b[0m\n\u001b[1;32m     20\u001b[0m n, d \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39mshape\n\u001b[1;32m     22\u001b[0m pi \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mfull((k,), \u001b[39m1\u001b[39m \u001b[39m/\u001b[39m k)\n\u001b[0;32m---> 24\u001b[0m m, _ \u001b[39m=\u001b[39m kmeans(X, k)\n\u001b[1;32m     26\u001b[0m S \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mfull((k, d, d), np\u001b[39m.\u001b[39midentity(d))\n\u001b[1;32m     28\u001b[0m \u001b[39mreturn\u001b[39;00m pi, m, S\n",
+            "Cell \u001b[0;32mIn[6], line 22\u001b[0m, in \u001b[0;36mkmeans\u001b[0;34m(X, k, iterations)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(iterations, \u001b[39mint\u001b[39m) \u001b[39mor\u001b[39;00m iterations \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     20\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m, \u001b[39mNone\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m Cs \u001b[39m=\u001b[39m initialize(X, k)\n\u001b[1;32m     23\u001b[0m clss \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margmin(np\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39mnorm(X[:, np\u001b[39m.\u001b[39mnewaxis] \u001b[39m-\u001b[39m Cs, axis\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m), axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     24\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(iterations):\n",
+            "Cell \u001b[0;32mIn[19], line 22\u001b[0m, in \u001b[0;36minitialize\u001b[0;34m(X, k)\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m, \u001b[39mNone\u001b[39;00m, \u001b[39mNone\u001b[39;00m\n\u001b[1;32m     20\u001b[0m n, d \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39mshape\n\u001b[0;32m---> 22\u001b[0m pi \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mfull((k,), \u001b[39m1\u001b[39;49m \u001b[39m/\u001b[39;49m k)\n\u001b[1;32m     24\u001b[0m m, _ \u001b[39m=\u001b[39m kmeans(X, k)\n\u001b[1;32m     26\u001b[0m S \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mfull((k, d, d), np\u001b[39m.\u001b[39midentity(d))\n",
+            "File \u001b[0;32m~/.local/lib/python3.10/site-packages/numpy/core/numeric.py:345\u001b[0m, in \u001b[0;36mfull\u001b[0;34m(shape, fill_value, dtype, order, like)\u001b[0m\n\u001b[1;32m    343\u001b[0m     dtype \u001b[39m=\u001b[39m fill_value\u001b[39m.\u001b[39mdtype\n\u001b[1;32m    344\u001b[0m a \u001b[39m=\u001b[39m empty(shape, dtype, order)\n\u001b[0;32m--> 345\u001b[0m multiarray\u001b[39m.\u001b[39;49mcopyto(a, fill_value, casting\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39munsafe\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m    346\u001b[0m \u001b[39mreturn\u001b[39;00m a\n",
+            "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mcopyto\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+            "\u001b[0;31mRecursionError\u001b[0m: maximum recursion depth exceeded"
+          ]
+        }
+      ],
       "source": [
-        "import numpy as np\n",
-        "\n",
         "if __name__ == '__main__':\n",
         "    np.random.seed(11)\n",
         "    a = np.random.multivariate_normal([30, 40], [[75, 5], [5, 75]], size=10000)\n",
